@@ -26,6 +26,10 @@
 #ifndef _E_SHM_H_
 #define _E_SHM_H_
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #define MAX_SHM_REGIONS				   64
 
 #include <stdint.h>
@@ -94,5 +98,9 @@ int e_shm_attach(e_memseg_t *mem, const char* name);
 
 /** Release a shared region allocated with e_shm_attach() */
 int e_shm_release(const char* name);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif	  /* _E_SHM_H_ */
